<resources>
    <string name="app_name" translatable="false">Learning Assistant</string>


    <!--Nav Menu Strings-->
    <string name="nav_menu_messages">Messages</string>
    <string name="nav_menu_my_tasks">My tasks</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_exit">Exit</string>
    <string name="nav_menu_header_defalt_fullname" translatable="false">Name Surname</string>
    <string name="nav_menu_header_phone" translatable="false">+79650000000</string>

    <!-- Fragments Titles -->
    <string name="fragment_chats">"Messages"</string>
    <string name="fragment_settings">"Settings"</string>
    <string name="fragment_my_tasks">My tasks</string>
    <string name="fragment_settings_user">"User"</string>


    <!-- Navigation strings -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Register fragment -->
    <string name="register_completed">Registration completed successfully!</string>
    <string name="register_enter_name">Enter your Name</string>
    <string name="register_enter_surname">Enter your Surname</string>
    <string name="register_enter_email">Enter your Email</string>
    <string name="register_enter_password">Enter your password</string>
    <string name="register_repeat_password">Repeat your password</string>
    <string name="register_different_passwords">You entered different passwords</string>

    <!-- Settings fragment -->
    <string name="settings_header_status">Online</string>
    <string name="account">Account</string>
    <string name="hint_email">Your mailing address</string>
    <string name="hint_user_email">Mailing address</string>
    <string name="default_rating" translatable="false">0.0</string>
    <string name="your_rating">Your rating</string>
    <string name="rating">Rating</string>
    <string name="_0" translatable="false">0</string>
    <string name="number_completed_works">Number of \"help\"</string>
    <string name="settings_default_info">Not set</string>
    <string name="settings_info_signature">Write a little about yourself</string>
    <string name="info">About me</string>
    <string name="change_name">Change name</string>
    <string name="ratingValue" formatted="false" translatable="false">%.1f</string>
    <string name="complWorkValue" formatted="false" translatable="false">%d</string>
    <string name="lang_russian" translatable="false">Русский</string>
    <string name="lang_english" translatable="false">English</string>
    <string name="lang_french" translatable="false">Français</string>
    <string name="lang_german" translatable="false">Deutsch</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language:</string>


    <!-- Task Item -->
    <string name="task_subject">School subject:</string>
    <string name="task_class">Class:</string>
    <string name="task_description">Description:</string>
    <string name="create_task">Ask for help</string>
    <string name="create_task_hint_description">Describe your assignment</string>
    <string name="create_task_submit">Post</string>
    <string name="create_task_name_topic">Topic name</string>
    <string name="btn_help">Help</string>

    <!-- Single chat -->
    <string name="message_hint">Message</string>
    <string name="edit_rating">Rate</string>
    <string name="sent_image">Image sent</string>
    <string name="thank_rate">Thank you for rating!</string>

    <!-- My Tasks Fragment -->
    <string name="all_tasks_removed">All tasks have been deleted</string>
    <string name="okay" translatable="false">Okay</string>
    <string name="delete_all">Delete all</string>


    <!-- Enter and Register Fragments -->
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="enter">Log in</string>
    <string name="login_button_desc">Login button</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="image_lock_desc">Image lock</string>
    <string name="have_yet_acc">Already have an account?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="enter_vk">Login with VK</string>
    <string name="text_register_now">Sign up</string>


    <integer name="com_vk_sdk_AppId">7933261</integer>

    <!-- Task Bottom Sheet -->
    <string name="school_subject">School subject</string>
    <string name="all_subjects">All</string>
    <string name="maths">Maths</string>
    <string name="subject_russian">Russian language</string>
    <string name="literature">Literature</string>
    <string name="subject_english">English</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="geograph">Geography</string>
    <string name="history">History</string>
    <string name="obshestvo">Social Studies</string>
    <string name="geom">Geometry</string>
    <string name="algebra">Algebra</string>
    <string name="inform">Computer science</string>
    <string name="biology">Biology</string>
    <string name="school_class">Class</string>
    <string name="class_1" translatable="false">1</string>
    <string name="class_2" translatable="false">2</string>
    <string name="class_3" translatable="false">3</string>
    <string name="class_4" translatable="false">4</string>
    <string name="class_5" translatable="false">5</string>
    <string name="class_6" translatable="false">6</string>
    <string name="class_7" translatable="false">7</string>
    <string name="class_8" translatable="false">8</string>
    <string name="class_9" translatable="false">9</string>
    <string name="class_10" translatable="false">10</string>
    <string name="class_11" translatable="false">11</string>
    <string name="all_classes">All</string>
    <string name="apply">Confirm</string>
    <string name="btn_my">My</string>

    <string name="main_fragment">main</string>
    <string name="messages_fragment">messages</string>
    <string name="image">Image</string>

    <!-- Toast messages -->
    <string name="data_update">Data has been updated</string>
    <string name="check_empty_fields">Fields cannot be empty</string>
    <string name="fill_fields">Fill in the fields!</string>


    <!-- Create task Subject Dropdown Menu -->
    <string-array name="subject_array">
        <item>Maths</item>
        <item>Russian language</item>
        <item>Literature</item>
        <item>English</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Geography</item>
        <item>History</item>
        <item>Social Studies</item>
        <item>Geometry</item>
        <item>Algebra</item>
        <item>Computer science</item>
        <item>Biology</item>
    </string-array>

    <!-- Create task Class Dropdown Menu -->
    <string-array name="class_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="delete_my_task_menu" translatable="false">Delete Task Menu</string>


</resources>