<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:title="@string/app_name">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_messages"
                        android:icon="@drawable/ic_nav_menu_message"
                        android:title="@string/nav_menu_messages" />
                    <item
                        android:id="@+id/nav_my_tasks"
                        android:icon="@drawable/ic_nav_my_tasks"
                        android:title="@string/nav_menu_my_tasks" />
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_nav_menu_settings"
                        android:title="@string/nav_menu_settings" />
                </group>
            </menu>
        </item>
    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_menu_exit"
            android:title="@string/nav_menu_exit" />
    </group>
</menu>