<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.settings.LanguageBottomSheet">

    <TextView
        android:id="@+id/tv_choose_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/choose_language"
        android:textColor="@color/darkGray"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/lang_rb_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_lang">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lang_russian"
            style="@style/LanguageRBStyle"
            android:text="@string/lang_russian"
            app:buttonTint="@color/purple_500" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lang_english"
            style="@style/LanguageRBStyle"
            android:text="@string/lang_english"
            app:buttonTint="@color/purple_500" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lang_french"
            style="@style/LanguageRBStyle"
            android:text="@string/lang_french"
            app:buttonTint="@color/purple_500" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/lang_german"
            style="@style/LanguageRBStyle"
            android:text="@string/lang_german"
            app:buttonTint="@color/purple_500" />
    </RadioGroup>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:backgroundTint="@color/purple_500"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_rb_group" />
</androidx.constraintlayout.widget.ConstraintLayout>